--- a/app/src/main/res/layout/activity_departamento.xml
+++ b/app/src/main/res/layout/activity_departamento.xml
@@ -27,7 +27,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:listSelector="@android:color/transparent"/>
+                android:listSelector="@android:color/transparent"
+                />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
