--- a/app/src/main/res/layout/activity_registrar_debito.xml
+++ b/app/src/main/res/layout/activity_registrar_debito.xml
@@ -31,48 +31,44 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabOptionPesquisar"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        app:fabCustomSize="45dp"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:backgroundTint="@color/primaryColor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:fabSize="mini"
+        android:backgroundTint="@color/primaryLightColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/search_primary" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabOptionFinalizar"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        app:fabCustomSize="45dp"
-        android:backgroundTint="@color/primaryColor"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:fabSize="mini"
+        android:backgroundTint="@color/primaryLightColor"
+        android:layout_margin="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/credit_card_multiple" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabOptionCliente"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        app:fabCustomSize="45dp"
-        android:backgroundTint="@color/primaryColor"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:fabSize="mini"
+        android:backgroundTint="@color/primaryLightColor"
+        android:layout_margin="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/account_primary_24dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabOptionCesta"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        app:fabCustomSize="45dp"
-        android:backgroundTint="@color/primaryColor"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:fabSize="mini"
+        android:backgroundTint="@color/primaryLightColor"
+        android:layout_margin="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/basket"
