--- a/app/src/main/res/layout/content_registrar_debito_pagamento_wizard.xml
+++ b/app/src/main/res/layout/content_registrar_debito_pagamento_wizard.xml
@@ -11,7 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_gravity="top"
-            android:background="@color/primaryLightColor"
+            android:background="@color/primaryColor"
             android:orientation="horizontal"
             android:padding="8dp">
 
