--- a/app/src/main/res/layout/dialog_layout_confirm.xml
+++ b/app/src/main/res/layout/dialog_layout_confirm.xml
@@ -63,6 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/ok"
+                android:textColor="@android:color/black"
                 android:background="@android:color/transparent"
                 android:layout_weight="1"/>
 
