--- a/app/src/main/res/layout/dialog_layout_error.xml
+++ b/app/src/main/res/layout/dialog_layout_error.xml
@@ -1,73 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/toast_layout_root"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:elevation="2dp"
-              android:background="#fff" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/toast_layout_root"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#fff"
+    android:elevation="2dp"
+    android:orientation="vertical">
 
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="vertical"
-                  android:background="@color/color_error"
-                  android:padding="4dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_error"
+        android:orientation="vertical"
+        android:padding="4dp">
 
-        <ImageView android:id="@+id/image"
-                   app:srcCompat="@drawable/close_circle_outline_white"
-                   android:layout_width="70dp"
-                   android:layout_height="70dp"
-                   android:layout_gravity="center" />
-
-    </LinearLayout>
-
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="vertical"
-                  android:padding="16dp">
-
-        <TextView android:id="@+id/title"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_gravity="center"
-                  android:textSize="25sp"
-                  android:textAlignment="center"
-                  android:text="@string/toast_title_error"
-                  android:textColor="@color/secondaryTextColor" />
-
-        <TextView android:id="@+id/text"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_gravity="center"
-                  android:textSize="16sp"
-                  android:layout_marginTop="16dp"
-                  android:text="@string/mensagem_erro"
-                  android:textColor="@color/secondaryTextColor" />
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/close_circle_outline_white" />
 
     </LinearLayout>
 
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="horizontal"
-                  android:padding="16dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-        <Button android:id="@+id/button_negative"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/cancelar"
-                android:background="@android:color/transparent"
-                android:layout_weight="1"/>
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/toast_title_error"
+            android:textAlignment="center"
+            android:textColor="@color/secondaryTextColor"
+            android:textSize="25sp" />
 
-        <Button android:id="@+id/button_positive"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/ok"
-                android:background="@android:color/transparent"
-                android:layout_weight="1"/>
-
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:text="@string/mensagem_erro"
+            android:textColor="@color/secondaryTextColor"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp">
+
+        <Button
+            android:id="@+id/button_negative"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:text="@string/cancelar"
+            android:textColor="@android:color/black" />
+
+        <Button
+            android:id="@+id/button_positive"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:text="@string/ok"
+            android:textColor="@color/color_error" />
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
