--- a/app/src/main/res/layout/list_view_item_meio_pagamento.xml
+++ b/app/src/main/res/layout/list_view_item_meio_pagamento.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="8dp">
 
     <ImageView
-            android:id="@+id/imageViewIcon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="@drawable/shape_circle_secondary"
-            android:padding="4dp" />
+        android:id="@+id/imageViewIcon"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:background="@drawable/shape_circle_secondary"
+        android:scaleType="center"
+        android:padding="4dp" />
 
     <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text="DINHEIRO"
-            android:textAlignment="center"
-            android:textColor="@color/secondaryTextColor"
-            android:textSize="14sp" />
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:padding="8dp"
+        android:text="DINHEIRO"
+        android:textAlignment="textStart"
+        android:textColor="@color/secondaryTextColor"
+        android:textSize="14sp" />
 
 </LinearLayout>
 
