--- a/app/src/main/res/layout/activity_cadastrar_produto.xml
+++ b/app/src/main/res/layout/activity_cadastrar_produto.xml
@@ -32,7 +32,8 @@
                     android:layout_height="50dp"
                     android:layout_gravity="bottom"
                     android:layout_marginBottom="8dp"
-                    android:background="@color/bg_black_transparencia"
+                    android:background="@android:color/darker_gray"
+                    android:alpha="0.5"
                     android:drawableTop="@drawable/camera"
                     android:gravity="center"
                     android:padding="4dp"
@@ -113,7 +114,7 @@
                         android:layout_height="match_parent"
                         android:hint="@string/nome_do_departamento"
                         android:imeOptions="actionDone"
-                        android:padding="16dp"
+                        android:paddingStart="16dp"
                         android:textSize="16sp"
                         android:inputType="text"
                         android:maxLines="1" />
