--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -45,13 +45,13 @@
                 android:layout_gravity="center"
                 android:textAlignment="center"
                 android:textColor="@android:color/primary_text_light"
-                android:textSize="16sp"
-                android:layout_marginBottom="43dip"/>
+                android:textSize="16sp"/>
 
         <ProgressBar
                 android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="70dip"
+                android:layout_marginBottom="50dp"
                 android:layout_marginStart="16dip"
                 android:layout_marginEnd="16dip"
                 android:indeterminate="true"
