--- a/app/src/main/res/layout/estoque_bottom_seet.xml
+++ b/app/src/main/res/layout/estoque_bottom_seet.xml
@@ -1,95 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="16dp">
+
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:layout_marginBottom="18dp"
+        android:text="@string/movimentacao_de_estoque"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
 
     <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:gravity="center"
-            android:text="@string/movimentacao_de_estoque"
-            android:textSize="16sp" />
-
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:text="@string/tipo_de_movimentacao"
-            android:textSize="14sp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:text="@string/tipo_de_movimentacao"
+        android:textColor="@android:color/black"
+        android:textSize="14sp" />
 
     <Spinner
-            android:id="@+id/spinner_tipo_movimentacao"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/shape_rectangule_rounded_white" />
+        android:id="@+id/spinner_tipo_movimentacao"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/shape_rectangule_rounded_theme" />
 
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:text="@string/motivo"
-            android:textSize="16dp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:text="@string/motivo"
+        android:textColor="@android:color/black"
+        android:textSize="14dp" />
 
     <Spinner
-            android:id="@+id/spinner_motivo"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/shape_rectangule_rounded_white" />
+        android:id="@+id/spinner_motivo"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/shape_rectangule_rounded_theme"/>
 
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/label_quantidade"
-            android:textSize="16dp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/label_quantidade"
+        android:layout_marginBottom="4dp"
+        android:textColor="@android:color/black"
+        android:textSize="14dp" />
 
     <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayoutQuantidade"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp">
+        android:id="@+id/textInputLayoutQuantidade"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp">
 
         <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/textViewQuantidade"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:background="@drawable/shape_rectangule_rounded_white"
-                android:inputType="number"
-                android:padding="4dp" />
+            android:id="@+id/textViewQuantidade"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:inputType="number"
+            android:padding="4dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
 
     <LinearLayout
-            android:layout_width="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dip"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/buttonCancel"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dip"
-            android:orientation="horizontal">
+            android:layout_gravity="left"
+            android:layout_weight="2"
+            android:background="@android:color/transparent"
+            android:text="@string/cancelar"
+            android:textColor="@color/secondaryTextColor" />
 
         <Button
-                android:id="@+id/buttonCancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_weight="2"
-                android:background="@android:color/transparent"
-                android:text="@string/cancelar"
-                android:textColor="@color/secondaryTextColor" />
-
-        <Button
-                android:id="@+id/buttonAdd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_weight="2"
-                android:background="@android:color/transparent"
-                android:text="@string/salvar"
-                android:textColor="@color/primaryColor" />
+            android:id="@+id/buttonAdd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_weight="2"
+            android:background="@android:color/transparent"
+            android:text="@string/salvar"
+            android:textColor="@color/primaryColor" />
 
     </LinearLayout>
 
